Fixing the nav menu so that right aligned

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /*@import url('reset.css');*/
-/*@import url('https://fonts.googleapis.com/css?family=Oswald:400,700');*/
+@import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
 html, * {
     padding:0;
     margin:0;
@@ -63,19 +63,20 @@ nav::after {
 }
 nav ul {
 font-family: 'Oswald', sans-serif;
-width:100%;
-text-align:right;
+    float:right;
+
 }
 nav ul li {
-display:inline-block;
+float:left;
 }
 nav ul li a {
     text-decoration: none;
     text-transform: uppercase;
-    padding:0 0 0 1em;
+    padding:0 1em;
     color:#FFF;
     font-size:1.2em;
     transition: 0.5s;
+    display:block;
 }
 nav ul li a:hover {
     color:#E17645;
